--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/home_body.css">
     <title>Adko Petko Market</title>
 </head>
 <body>
+
 
 <!-- Horny cierny pruh -->
 <div class="top-bar">
@@ -16,7 +18,7 @@
 </div>
 
 <!-- Horny navbar -->
-<nav class="navbar bg-light navbar-light">
+<nav class="navbar bg-light navbar-light d-flex justify-content-center">
     <div class="container-fluid justify-content-start">
         <a href="#" class="nav-link menu-item strong-active">Muži</a>
         <a href="#" class="nav-link menu-item">Ženy</a>
@@ -53,23 +55,23 @@
         <!-- navigacne menu -->
         <div class="collapse navbar-collapse justify-content-end" id="navmenu">
             <ul class="navbar-nav ms-auto d-flex">
-                <li class="nav-item">
+                <li class="menu-item">
                     <img src="images/lupa.png" alt="lupa" class="navbar-icon">
                     <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
                 </li>
-                <li class="nav-item">
+                <li class="menu-item">
                     <a class="nav-link" href="#">
                         <img src="images/kosik.png" alt="Košík" class="navbar-icon">
                         2 Košík
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="menu-item">
                     <a class="nav-link" href="#">
                         <img src="images/prihlasenie.png" alt="login" class="navbar-icon">
                         Prihlásenie
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="menu-item">
                     <a class="nav-link" href="#">
                         <img src="images/podpora.png" alt="podpora" class="navbar-icon">
                         Podpora
@@ -89,23 +91,23 @@
     </div>
     <div class="offcanvas-body">
         <ul class="navbar-nav ms-auto d-flex">
-            <li class="nav-item">
+            <li class="menu-item">
                 <img src="images/lupa.png" alt="lupa" class="navbar-icon">
                 <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
             </li>
-            <li class="nav-item">
+            <li class="menu-item">
                 <a class="nav-link" href="#">
                     <img src="images/kosik.png" alt="Košík" class="navbar-icon">
                     2 Košík
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="menu-item">
                 <a class="nav-link" href="#">
                     <img src="images/prihlasenie.png" alt="login" class="navbar-icon">
                     Prihlásenie
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="menu-item">
                 <a class="nav-link" href="#">
                     <img src="images/podpora.png" alt="podpora" class="navbar-icon">
                     Podpora
@@ -114,6 +116,102 @@
         </ul>
     </div>
 </div>
+
+<!-- ************************************ END OF NAVBAR  **************************************************-->
+
+<!-- BIG PICTURE MARKET-->
+<section class="hero-banner">
+    <img src="images/main_photo_1.jpg" alt="Hero Banner" />
+    <img src="images/main_photo_2.jpg" alt="Hero Banner" />
+</section>
+
+
+
+<!-- MAIN CONTENT -->
+<main>
+    <!-- Section 1: Najnovsie produkty -->
+    <section>
+        <div class="section-header">
+            <div class="section-title">Najnovšie produkty</div>
+            <button class="shop-all-btn">Shop All</button>
+        </div>
+        <div class="product-grid">
+            <!-- Product items here -->
+        </div>
+
+        <div class="product-grid">
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Nohavice_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Tricko_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_2</div>
+            </a>
+        </div>
+    </section>
+
+    <section>
+        <div class="product-grid">
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Nohavice_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Tricko_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_2</div>
+            </a>
+        </div>
+    </section>
+
+    <!-- Section 2: Odporucane produkty-->
+    <section style="margin-top: 3rem;">
+        <div class="section-header">
+            <div class="section-title">Odporúčané produkty</div>
+            <button class="shop-all-btn">Shop All</button>
+        </div>
+        <div class="product-grid">
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Nohavice_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Tricko_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_2</div>
+            </a>
+        </div>
+    </section>
+</main>
+
+<!-- FOOTER -->
+<footer>
+    &copy; 2025 Made with love from xStefanec & xKazimir
+</footer>
+
 
 <!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
