Create shopping page with products from the category. Posibility sorting and filtering items

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
 
+<!--**************** START OF TOP NAVBAR ********************-->
 <!-- Horny cierny pruh -->
 <div class="top-bar">
     Až 50% zľava na vybrané produkty do konca augusta
@@ -151,6 +152,10 @@
             <a href="product-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Tricko_1</div>
+            </a>
+            <a href="product-detail.html" class="product-item">
+                <img src="images/tricko.jpg" alt="tricko">
+                <div class="product-name">Bunda_2</div>
             </a>
             <a href="product-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
