Add view of single chosen product. User can choose size and quantity. Full responsive.

--- a/index.html
+++ b/index.html
@@ -141,23 +141,23 @@
         </div>
 
         <div class="product-grid">
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Nohavice_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Tricko_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_2</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_2</div>
             </a>
@@ -166,19 +166,19 @@
 
     <section>
         <div class="product-grid">
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Nohavice_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Tricko_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_2</div>
             </a>
@@ -192,19 +192,19 @@
             <button class="shop-all-btn">Shop All</button>
         </div>
         <div class="product-grid">
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Nohavice_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Tricko_1</div>
             </a>
-            <a href="product-detail.html" class="product-item">
+            <a href="products-detail.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko">
                 <div class="product-name">Bunda_2</div>
             </a>
