Add functionality of zooming product images

--- a/product.html
+++ b/product.html
@@ -124,20 +124,26 @@
 
 
 <div class="container">
-  <div class="product-images-grid">
+  <div class="product-images-grid" >
      <div class="product-image-div">
-        <img src="images/tricko.jpg" alt="tricko" class="product-image">
+        <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
      </div>
     <div class="product-image-div">
-      <img src="images/tricko.jpg" alt="tricko" class="product-image">
+      <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
     </div>
     <div class="product-image-div">
-      <img src="images/tricko.jpg" alt="tricko" class="product-image">
+      <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
     </div>
     <div class="product-image-div">
-      <img src="images/tricko.jpg" alt="tricko" class="product-image">
+      <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
     </div>
   </div>
+
+<!--  Just thumbnail-->
+  <div id="lightbox" class="lightbox">
+    <img class="lightbox-img" src="" alt="">
+  </div>
+
 
 
   <div class="product-description">
@@ -204,8 +210,10 @@
 
 
 
+
 <script src="filters.js"></script>
 <script src="quantities.js"></script>
+<script src="image-zoom.js"></script>
 
 </body>
 </html>
