Add checkout address page. Upgrade shopping cart page responsibility

--- a/products-detail.html
+++ b/products-detail.html
@@ -7,7 +7,6 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/products-detail.css">
-    <link rel="stylesheet" href="css/input-range.css">
     <title>Adko Petko Market</title>
 </head>
 <body>
@@ -61,10 +60,10 @@
                     <img src="images/lupa.png" alt="lupa" class="navbar-icon">
                     <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
                 </li>
-                <li class="menu-item">
+                <li class="menu-item active">
                     <a class="nav-link" href="#">
                         <img src="images/kosik.png" alt="Košík" class="navbar-icon">
-                        2 Košík
+                        <span>2 Košík</span>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -119,7 +118,9 @@
     </div>
 </div>
 
-<!-- ***********************s************* END OF NAVBAR  **************************************************-->
+<!-- ********************************************* END OF NAVBAR  **************************************************-->
+
+
 
 <header>
     <h2>Najpredávanejšie</h2>
