--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -60,10 +60,10 @@
           <img src="images/lupa.png" alt="lupa" class="navbar-icon">
           <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
         </li>
-        <li class="menu-item">
+        <li class="menu-item active">
           <a class="nav-link" href="#">
             <img src="images/kosik.png" alt="Košík" class="navbar-icon">
-            2 Košík
+            <span>2 Košík</span>
           </a>
         </li>
         <li class="menu-item">
