--- a/checkout_address.html
+++ b/checkout_address.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/home_body.css">
+    <link rel="stylesheet" href="css/checkout-address.css">
     <title>Adko Petko Market</title>
 </head>
 <body>
@@ -120,105 +120,38 @@
 
 <!-- ********************************************* END OF NAVBAR  **************************************************-->
 
-<!-- BIG PICTURE MARKET-->
-<section class="hero-banner">
-    <img src="images/main_photo_1.jpg" alt="Hero Banner" />
-    <img src="images/main_photo_2.jpg" alt="Hero Banner" />
-</section>
 
-
-
-<!-- MAIN CONTENT -->
-<main>
-    <!-- Section 1: Najnovsie produkty -->
-    <section>
-        <div class="section-header">
-            <div class="section-title">Najnovšie produkty</div>
-            <button class="shop-all-btn">Shop All</button>
+<main class="container">
+    <section class="summary-card">
+        <h1>Zhrnutie objednávky</h1>
+        <div class="progress">
+            <span class="step active">Adresa</span>
+            <span class="separator">——————</span>
+            <span class="step">Doručenie</span>
+            <span class="separator">——————</span>
+            <span class="step">Platba</span>
         </div>
-        <div class="product-grid">
-            <!-- Product items here -->
-        </div>
-
-        <div class="product-grid">
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
-                <div class="price">100$</div>
-            </a>
-        </div>
-    </section>
-
-    <section>
-        <div class="product-grid">
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
-                <div class="price">100$</div>
-            </a>
-        </div>
-    </section>
-
-    <!-- Section 2: Odporucane produkty-->
-    <section style="margin-top: 3rem;">
-        <div class="section-header">
-            <div class="section-title">Odporúčané produkty</div>
-            <button class="shop-all-btn">Shop All</button>
-        </div>
-        <div class="product-grid">
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
-                <div class="price">100$</div>
-            </a>
-        </div>
+        <form class="address-form">
+            <div class="name-fields">
+                <input type="text" placeholder="Meno">
+                <input type="text" placeholder="Priezvisko">
+            </div>
+            <input type="text" placeholder="Adresa">
+            <input type="text" placeholder="Mesto">
+            <div class="postcode-row">
+                <select>
+                    <option>Slovensko</option>
+                    <option>Česká republika</option>
+                </select>
+                <input type="text" placeholder="PSČ">
+            </div>
+            <textarea placeholder="Dodatočné info"></textarea>
+            <button type="submit">Pokračovať k doprave</button>
+        </form>
     </section>
 </main>
+
+
 
 <!-- FOOTER -->
 <footer>
@@ -226,9 +159,7 @@
 </footer>
 
 
-<!-- Bootstrap JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+
+
 </body>
 </html>
