--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/navbar.css">
-  <link rel="stylesheet" href="css/product-body.css">
+  <link rel="stylesheet" href="css/shopping-cart.css">
   <title>Adko Petko Market</title>
 </head>
 <body>
@@ -60,10 +60,10 @@
           <img src="images/lupa.png" alt="lupa" class="navbar-icon">
           <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
         </li>
-        <li class="menu-item">
+        <li class="menu-item active">
           <a class="nav-link" href="#">
             <img src="images/kosik.png" alt="Košík" class="navbar-icon">
-            2 Košík
+            <span>2 Košík</span>
           </a>
         </li>
         <li class="menu-item">
