--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/navbar.css">
-  <link rel="stylesheet" href="css/shopping-cart.css">
+  <link rel="stylesheet" href="css/product-body.css">
   <title>Adko Petko Market</title>
 </head>
 <body>
