--- a/product.html
+++ b/product.html
@@ -211,9 +211,9 @@
 
 
 
-<script src="filters.js"></script>
-<script src="quantities.js"></script>
-<script src="image-zoom.js"></script>
+<script src="javascript-files/filters.js"></script>
+<script src="javascript-files/quantities.js"></script>
+<script src="javascript-files/image-zoom.js"></script>
 
 </body>
 </html>
