--- a/products-detail.html
+++ b/products-detail.html
@@ -249,7 +249,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 <!--Functionality for input range-->
-<script src="filters.js"></script>
+<script src="javascript-files/filters.js"></script>
 
 </body>
 </html>
