--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -6,9 +6,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/navbar.css">
-  <link rel="stylesheet" href="css/checkout-shipping.css">
-  <link rel="stylesheet" href="css/checkout-progress.css">
   <link rel="stylesheet" href="css/checkout-payment.css">
+  <link rel="stylesheet" href="css/checkout-progress.css">
   <title>Adko Petko Market</title>
 </head>
 <body>
@@ -169,10 +168,16 @@
       </label>
     </fieldset>
 
-    <button type="submit">Zaplať</button>
+    <button id="pay-button" type="submit">Zaplať</button>
   </form>
   </section>
 </main>
 
+
+
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </html>
