--- a/checkout-choosing-payment.html
+++ b/checkout-choosing-payment.html
@@ -134,13 +134,15 @@
     </div>
     <form>
       <div class="shipping-option">
-        <label><input type="radio" name="delivery" checked>Packeta kuriér</label>
-        <small>3‑5 Pracovné dni</small>
+        <label><input type="radio" name="delivery" checked>Platobná karta</label>
       </div>
 
       <div class="shipping-option">
-        <label><input type="radio" name="delivery">Slovenská pošta kuriér</label>
-        <small>4‑5 Pracovné dni</small>
+        <label><input type="radio" name="delivery">Apple pay</label>
+      </div>
+
+      <div class="shipping-option">
+        <label><input type="radio" name="delivery">Pay pall</label>
       </div>
 
       <button type="submit">Pokračovať k platbe</button>
