--- a/product.html
+++ b/product.html
@@ -7,6 +7,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/product-body.css">
+  <link rel="stylesheet" href="css/size-selector.css"></link>
   <title>Adko Petko Market</title>
 </head>
 <body>
