Main page for admin + minor changes

--- a/products-view.html
+++ b/products-view.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/products-detail.css">
+    <link rel="stylesheet" href="css/products-view.css">
     <link rel="stylesheet" href="css/input-range.css">
     <title>Adko Petko Market</title>
 </head>
@@ -173,52 +173,52 @@
 
         <section class="product-grid">
 <!-- EXAMPLE PRODUCT ITEMS -->
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Bunda_1</div>
                 <div class="product-price">$100</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Bunda_2</div>
                 <div class="product-price">$90</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Tricko_1</div>
                 <div class="product-price">$50</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
             </a>
-            <a href="products-detail.html" class="product-item">
+            <a href="products-view.html" class="product-item">
                 <img src="images/tricko.jpg" alt="tricko" />
                 <div class="product-name">Nohavice_1</div>
                 <div class="product-price">$70</div>
