--- a/admin_index.html
+++ b/admin_index.html
@@ -7,6 +7,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/home_body.css">
+    <link rel="stylesheet" href="css/admin-index.css"></link>
     <title>Adko Petko Market</title>
 </head>
 <body>
@@ -188,37 +189,17 @@
             </a>
         </div>
     </section>
-
-    <!-- Section 2: Odporucane produkty-->
-    <section style="margin-top: 3rem;">
-        <div class="section-header">
-            <div class="section-title">Odporúčané produkty</div>
-            <button class="shop-all-btn">Shop All</button>
-        </div>
-        <div class="product-grid">
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
-                <div class="price">100$</div>
-            </a>
-        </div>
-    </section>
 </main>
+
+
+<section class="adding-item-div">
+    <h2>Pridať nový produkt</h2>
+    <div id="add_product">
+        <a href="#" class="product-item">
+            <img src="images/add_new.svg" alt="tricko">
+        </a>
+    </div>
+</section>
 
 <!-- FOOTER -->
 <footer>
