--- a/admin_products_view.html
+++ b/admin_products_view.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/products-view.css">
     <link rel="stylesheet" href="css/input-range.css">
+    <link rel="stylesheet" href="css/admin-products-view.css">
     <title>Adko Petko Market</title>
 </head>
 <body>
@@ -158,12 +159,12 @@
             <label for="price-range">Najdrahšie <span id="range-value">500 $</span></label>
         </fieldset>
 
-<!--         mozno aj button  ale netreba -->
-<!--        <button type="submit" class="apply-filters">Použiť filtre</button>-->
+        <!--         mozno aj button  ale netreba -->
+        <!--        <button type="submit" class="apply-filters">Použiť filtre</button>-->
     </form>
 
     <main>
-<!-- SORT CONTAINER ABOVE PRODUCTS -->
+        <!-- SORT CONTAINER ABOVE PRODUCTS -->
         <div class="sort-container">
             <div class="sort-header">
                 <label for="sort-select">Zoradiť podľa:</label>
@@ -178,86 +179,92 @@
         </div>
 
         <section class="product-grid">
-<!-- EXAMPLE PRODUCT ITEMS -->
+            <!-- EXAMPLE PRODUCT ITEMS -->
             <div class="product-item">
-                <a href="products-view.html" class="product-link">
+                <a href="#" class="product-link">
                     <img src="images/tricko.jpg" alt="tricko">
                     <div class="product-name"><span>Nohavice_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
+
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
+
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
+
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
+
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
             </div>
 
             <div class="product-item">
-                <a href="products-view.html" class="product-link">
+                <a href="#" class="product-link">
                     <img src="images/tricko.jpg" alt="tricko">
                     <div class="product-name"><span>Nohavice_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
+
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
             </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
 
-            <div class="product-item">
-                <a href="products-view.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
             <!-- ... more products ... -->
         </section>
 
