--- a/checkout_shipping.html
+++ b/checkout_shipping.html
@@ -133,16 +133,17 @@
       <span class="step">Platba</span>
     </div>
     <form>
-      <div class="shipping-option">
-        <label><input type="radio" name="delivery" checked>Packeta kuriér</label>
-        <small>3‑5 Pracovné dni</small>
-      </div>
+      <fieldset>
+        <div class="shipping-option">
+          <label><input type="radio" name="delivery" checked>Packeta kuriér</label>
+          <small>3‑5 Pracovné dni</small>
+        </div>
 
-      <div class="shipping-option">
-        <label><input type="radio" name="delivery">Slovenská pošta kuriér</label>
-        <small>4‑5 Pracovné dni</small>
-      </div>
-
+        <div class="shipping-option">
+          <label><input type="radio" name="delivery">Slovenská pošta kuriér</label>
+          <small>4‑5 Pracovné dni</small>
+        </div>
+      </fieldset>
       <button type="submit">Pokračovať k platbe</button>
     </form>
   </section>
