--- a/admin_products_view.html
+++ b/admin_products_view.html
@@ -259,11 +259,35 @@
             </div>
 
 
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
 
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
 
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
 
-
-
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
 
             <!-- ... more products ... -->
         </section>
