added footer to checkout-payment, added order confirmed page

--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -172,6 +172,10 @@
 </main>
 
 
+<!-- FOOTER -->
+<footer>
+  &copy; 2025 Made with love from xStefanec & xKazimir
+</footer>
 
 </body>
 
@@ -179,3 +183,4 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </html>
+
